--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "@nuxt/http": "^0.6.4",
     "@nuxt/typescript-runtime": "^2.0.1",
     "@nuxtjs/axios": "^5.12.5",
+    "@nuxtjs/proxy": "^2.1.0",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
     "nuxt-property-decorator": "^2.9.1"
