--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
     "esModuleInterop": true,
     "allowJs": true,
     "sourceMap": true,
-    "strict": true,
     "noEmit": true,
     "experimentalDecorators": true,
     "baseUrl": ".",
@@ -26,7 +25,8 @@
     "types": [
       "@nuxt/types",
       "@nuxtjs/axios",
-      "@types/node"
+      "@types/node",
+      "nuxt-leaflet"
     ]
   },
   "exclude": [
