--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
         "lint": "npm run lint:js"
     },
     "dependencies": {
+        "@geoman-io/leaflet-geoman-free": "^2.9.0",
         "@nuxt/http": "^0.6.4",
         "@nuxt/typescript-runtime": "^2.0.1",
         "@nuxtjs/proxy": "^2.1.0",
         "core-js": "^3.8.3",
         "nuxt": "^2.14.12",
         "nuxt-leaflet": "^0.0.25",
-        "nuxt-property-decorator": "^2.9.1"
+        "nuxt-property-decorator": "^2.9.1",
+        "patch-package": "^6.4.6"
     },
     "devDependencies": {
         "@nuxt/types": "^2.14.12",
