--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start": "nuxt-ts start",
         "generate": "nuxt-ts generate",
         "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-        "lint": "npm run lint:js"
+        "lint": "npm run lint:js",
+        "postinstall": "patch-package"
     },
     "dependencies": {
         "@geoman-io/leaflet-geoman-free": "^2.9.0",
