--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "generate": "nuxt-ts generate",
         "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
         "lint": "npm run lint:js",
-        "postinstall": "patch-package"
+        "postinstall": "npx patch-package"
     },
     "dependencies": {
         "@geoman-io/leaflet-geoman-free": "^2.9.0",
