--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "nuxt": "^2.14.12",
         "nuxt-leaflet": "^0.0.25",
         "nuxt-property-decorator": "^2.9.1",
+        "nuxt-tailvue": "^1.0.68",
         "patch-package": "^6.4.6"
     },
     "devDependencies": {
