--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "nuxt-leaflet": "^0.0.25",
         "nuxt-property-decorator": "^2.9.1",
         "nuxt-tailvue": "^1.0.68",
-        "patch-package": "^6.4.6"
+        "patch-package": "^6.4.6",
+        "websocket-ts": "^1.1.0"
     },
     "devDependencies": {
         "@nuxt/types": "^2.14.12",
