--- a/package.json
+++ b/package.json
@@ -1,44 +1,49 @@
 {
-    "name": "crime-frontend",
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-        "dev": "nuxt-ts -H localhost",
-        "build": "nuxt-ts build",
-        "start": "nuxt-ts start",
-        "generate": "nuxt-ts generate",
-        "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-        "lint": "npm run lint:js",
-        "postinstall": "patch-package"
-    },
-    "dependencies": {
-        "@geoman-io/leaflet-geoman-free": "^2.9.0",
-        "@nuxt/http": "^0.6.4",
-        "@nuxt/typescript-runtime": "^2.0.1",
-        "@nuxtjs/proxy": "^2.1.0",
-        "@types/actioncable": "^5.2.3",
-        "actioncable": "^5.2.4-5",
-        "actioncable-vue": "^2.4.6",
-        "core-js": "^3.8.3",
-        "nuxt": "^2.14.12",
-        "nuxt-leaflet": "^0.0.25",
-        "nuxt-property-decorator": "^2.9.1",
-        "nuxt-tailvue": "^1.0.68",
-        "patch-package": "^6.4.6"
-    },
-    "devDependencies": {
-        "@nuxt/types": "^2.14.12",
-        "@nuxt/typescript-build": "^2.0.4",
-        "@nuxtjs/eslint-config-typescript": "^5.0.0",
-        "@nuxtjs/eslint-module": "^3.0.2",
-        "@nuxtjs/tailwindcss": "^3.4.2",
-        "@tailwindcss/postcss7-compat": "^2.0.3",
-        "autoprefixer": "^9.8.6",
-        "babel-eslint": "^10.1.0",
-        "eslint": "^7.18.0",
-        "eslint-plugin-nuxt": "^2.0.0",
-        "eslint-plugin-vue": "^7.5.0",
-        "postcss": "^7.0.35",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
-    }
+  "name": "crime-frontend",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "nuxt-ts -H localhost",
+    "build": "nuxt-ts build",
+    "start": "nuxt-ts start",
+    "generate": "nuxt-ts generate",
+    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
+    "lint": "npm run lint:js",
+    "postinstall": "patch-package",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@geoman-io/leaflet-geoman-free": "^2.9.0",
+    "@nuxt/http": "^0.6.4",
+    "@nuxt/typescript-runtime": "^2.0.1",
+    "@nuxtjs/proxy": "^2.1.0",
+    "@types/actioncable": "^5.2.3",
+    "actioncable": "^5.2.4-5",
+    "actioncable-vue": "^2.4.6",
+    "core-js": "^3.8.3",
+    "nuxt": "^2.14.12",
+    "nuxt-leaflet": "^0.0.25",
+    "nuxt-property-decorator": "^2.9.1",
+    "nuxt-tailvue": "^1.0.68",
+    "patch-package": "^6.4.6",
+    "ts-jest": "^26.5.4"
+  },
+  "devDependencies": {
+    "@nuxt/test-utils": "^0.2.0",
+    "@nuxt/types": "^2.14.12",
+    "@nuxt/typescript-build": "^2.0.4",
+    "@nuxtjs/eslint-config-typescript": "^5.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/tailwindcss": "^3.4.2",
+    "@tailwindcss/postcss7-compat": "^2.0.3",
+    "@types/jest": "^26.0.21",
+    "autoprefixer": "^9.8.6",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.18.0",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-vue": "^7.5.0",
+    "jest": "^26.6.3",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
+  }
 }
