--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "generate": "nuxt-ts generate",
         "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
         "lint": "npm run lint:js",
+        "postinstall": "patch-package",
         "test": "jest"
     },
     "dependencies": {
