finally got around to adding multiple cables when adding new news tables

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
         "@nuxt/typescript-runtime": "^2.0.1",
         "@nuxtjs/proxy": "^2.1.0",
         "@types/actioncable": "^5.2.3",
-        "actioncable": "^5.2.4-5",
-        "actioncable-vue": "^2.4.6",
+        "actioncable": "^5.2.5",
         "chart.js": "^2.9.4",
         "core-js": "^3.8.3",
         "leaflet.markercluster": "^1.5.0",
