--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "sass": "^1.32.8",
         "sass-loader": "^10.1.1",
         "ts-jest": "^26.5.4",
-        "vue-chartjs": "^3.5.1"
+        "vue-chartjs": "^3.5.1",
+        "vuex-module-decorators": "^1.0.1"
     },
     "devDependencies": {
         "@nuxt/test-utils": "^0.2.0",
