--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
         "generate": "nuxt-ts generate",
         "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
         "lint": "npm run lint:js",
-        "postinstall": "patch-package",
-        "test": "jest"
+        "postinstall": "patch-package"
     },
     "dependencies": {
         "@geoman-io/leaflet-geoman-free": "^2.9.0",
@@ -36,19 +35,16 @@
     },
     "devDependencies": {
         "@nuxt/test-utils": "^0.2.0",
-        "@nuxt/types": "^2.14.12",
         "@nuxt/typescript-build": "^2.0.4",
         "@nuxtjs/eslint-config-typescript": "^5.0.0",
         "@nuxtjs/eslint-module": "^3.0.2",
         "@nuxtjs/tailwindcss": "^3.4.2",
         "@tailwindcss/postcss7-compat": "^2.0.3",
-        "@types/jest": "^26.0.21",
         "autoprefixer": "^9.8.6",
         "babel-eslint": "^10.1.0",
         "eslint": "^7.18.0",
         "eslint-plugin-nuxt": "^2.0.0",
         "eslint-plugin-vue": "^7.5.0",
-        "jest": "^26.6.3",
         "postcss": "^7.0.35",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
     }
